ex01 restructre + cleanup completed ex02

--- a/Module_00/ex02/Makefile
+++ b/Module_00/ex02/Makefile
@@ -1,5 +1,5 @@
-NAME        = phonebook
-SRCS        = main.cpp Contact.cpp PhoneBook.cpp
+NAME        = Account
+SRCS        = Account.cpp tests.cpp
 OBJDIR      = .obj
 OBJS        = $(SRCS:%.cpp=$(OBJDIR)/%.o)
 
